--- a/public/index.html
+++ b/public/index.html
@@ -1,54 +1,68 @@
 <html>
 <head>
   <title>D3 experiment</title>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <!-- D3 dependencies -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js" integrity="sha256-a8efFZkE8ZBfytq1k9LorWQGrPqty3Cvr9suCc4u+t0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js" integrity="sha256-Wc2Uq3HwPZQ+Fb95WIzDfema9SAjcwzWjlEWDFdHFbM=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datamaps/0.5.8/datamaps.world.min.js" integrity="sha256-MM11H7FxxyGwyb+gndJIF4zAroRqOhCxaK4FDrM5QVM=" crossorigin="anonymous"></script>
+
+  <style>
+  .overlay{
+      width:100%;
+      height:100%;
+  }
+  </style>
 </head>
 <body>
-  <div id="chart"></div>
+  <a href="https://github.com/Fohlen/d3-experiment"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+  <div id="countries" class="overlay"></div>
 
   <script>
-  const width = 500;
-  const height = 500;
-  const radius = Math.min(width, height) / 2;
-  const color = d3.scaleOrdinal(d3.schemeCategory20b);
-
-  let svg = d3.select('#chart')
-    .append('svg')
-      .attr('width', width)
-      .attr('height', height)
-    .append('g')
-      .attr('transform', 'translate(' + (width / 2) +  ',' + (height / 2) + ')');
-
-  let arc = d3.arc()
-    .innerRadius(0)
-    .outerRadius(radius);
-
   d3.json('/api/server/countries', (data) => {
-    let pie = d3.pie()
-      .value((d) => d.total)
+    let dataset = []
+    let values = data.map((obj) => obj.total)
 
-    /**let path = svg.selectAll('path')
-      .data(pie(data))
-      .enter()
-      .append('path')
-      .attr('d', arc)
-      .attr('fill', (d, i) => color(d.data._id))*/
-    let g = svg.selectAll('.arc')
-      .data(pie(data))
-      .enter()
-      .append('g')
-      .attr('class', 'arc')
+    let minValue = Math.min.apply(null, values)
+    let maxValue = Math.max.apply(null, values)
+    let paletteScale = d3.scale.linear()
+        .domain([minValue,maxValue])
+        .range(["orange","red"]); // blue color
 
-    g.append('path')
-      .attr('d', arc)
-      .style('fill', (d, i) => color(d.data._id))
+    data.forEach(function(item){ //
+        // item example value ["USA", 70]
+        let iso = item._id;
+        let value = item.total;
 
-    g.append('text')
-      .attr('transform', (d) => "translate(" + arc.centroid(d) + ")" )
-      .attr('dy', '.35em')
-      .text((d) => d.data._id)
+        dataset[iso] = { numberOfThings: value, fillColor: paletteScale(value) };
+    });
 
-  });
+    new Datamap({
+        element: document.getElementById('countries'),
+        // countries don't listed in dataset will be painted with this color
+        fills: { defaultFill: '#F5F5F5' },
+        data: dataset,
+        geographyConfig: {
+            borderColor: '#DEDEDE',
+            highlightBorderWidth: 2,
+            // don't change color on mouse hover
+            highlightFillColor: function(geo) {
+                return geo['fillColor'] || '#F5F5F5';
+            },
+            // only change border
+            highlightBorderColor: '#B7B7B7',
+            // show desired information in tooltip
+            popupTemplate: function(geo, data) {
+                // don't show tooltip if country don't present in dataset
+                if (!data) { return ; }
+                // tooltip content
+                return ['<div class="hoverinfo">',
+                    '<strong>', geo.properties.name, '</strong>',
+                    '<br>Count: <strong>', data.numberOfThings, '</strong>',
+                    '</div>'].join('');
+            }
+        }
+    });
+  })
   </script>
 
 </body>
